[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gear/levelmaker/door.png" type="Texture" id=1]
[ext_resource path="res://entities/door/door.gd" type="Script" id=2]
[ext_resource path="res://assets/gear/ui/small_button.png" type="Texture" id=3]
[ext_resource path="res://fonts/monogram.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 7 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("interact_button:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -32 ), Vector2( -7, -31 ) ]
}

[node name="door" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 1 )

[node name="interact_button" type="Control" parent="."]
margin_left = -7.0
margin_top = -32.0
margin_right = 7.0
margin_bottom = -18.0

[node name="background" type="TextureRect" parent="interact_button"]
margin_right = 14.0
margin_bottom = 14.0
texture = ExtResource( 3 )

[node name="label" type="Label" parent="interact_button"]
margin_left = 1.0
margin_top = -1.0
margin_right = 15.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "E"
align = 1
valign = 1

[node name="animation_player" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_door_body_exited"]
